# dial

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: app.rs  editor.rs  main.rs  persistence.rs  view.rs
