[package]
name = "dial"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A terminal-based code snippet manager and viewer built with ratatui."

[[bin]]
name = "dial"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
directories = "6.0.0"
log = "0.4.27"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simplelog = "0.12.2"
syntect = "5.2.0"
syntect-tui = "3.0.6"
